Avoid overflow of table headers in treeview

--- a/src/sao.less
+++ b/src/sao.less
@@ -20,6 +20,10 @@
         & > thead > tr > th.selection {
             width: 30px;
         }
+        & > thead > tr > th {
+            overflow: hidden;
+            text-overflow: ellipsis;
+        }
         & > tbody > tr > td {
             cursor: pointer;
             & > * {
